; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_fd_mcs.c_fd_mcs_bus_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_fd_mcs.c_fd_mcs_bus_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.Scsi_Host* }
%struct.Scsi_Host = type { i32 }

@SCSI_Cntl_port = common dso_local global i32 0, align 4
@SCSI_Mode_Cntl_port = common dso_local global i32 0, align 4
@PARITY_MASK = common dso_local global i32 0, align 4
@TMC_Cntl_port = common dso_local global i32 0, align 4
@SUCCESS = common dso_local global i32 0, align 4
@current_SC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*)* @fd_mcs_bus_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fd_mcs_bus_reset(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca %struct.Scsi_Host*, align 8
  %4 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load %struct.Scsi_Host*, %struct.Scsi_Host** %8, align 8
  store %struct.Scsi_Host* %9, %struct.Scsi_Host** %3, align 8
  %10 = load %struct.Scsi_Host*, %struct.Scsi_Host** %3, align 8
  %11 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @spin_lock_irqsave(i32 %12, i64 %13)
  %15 = load i32, i32* @SCSI_Cntl_port, align 4
  %16 = call i32 @outb(i32 1, i32 %15)
  %17 = call i32 @do_pause(i32 2)
  %18 = load i32, i32* @SCSI_Cntl_port, align 4
  %19 = call i32 @outb(i32 0, i32 %18)
  %20 = call i32 @do_pause(i32 115)
  %21 = load i32, i32* @SCSI_Mode_Cntl_port, align 4
  %22 = call i32 @outb(i32 0, i32 %21)
  %23 = load i32, i32* @PARITY_MASK, align 4
  %24 = load i32, i32* @TMC_Cntl_port, align 4
  %25 = call i32 @outb(i32 %23, i32 %24)
  %26 = load %struct.Scsi_Host*, %struct.Scsi_Host** %3, align 8
  %27 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i64, i64* %4, align 8
  %30 = call i32 @spin_unlock_irqrestore(i32 %28, i64 %29)
  %31 = load i32, i32* @SUCCESS, align 4
  ret i32 %31
}

declare dso_local i32 @spin_lock_irqsave(i32, i64) #1

declare dso_local i32 @outb(i32, i32) #1

declare dso_local i32 @do_pause(i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
